# mono-macro

./: Cargo.toml  README.md
src/: lib.rs
tests/: bare.rs  lifetime.rs  trait.rs
