[package]
name = "mono-macro"
version = "0.1.1"
edition = "2018"
authors = [ "csmoe <csmoe@msn.com>" ]
keywords = [ "monomorphization", "share-generics", "monomorphizing", "code-bloat", "size" ]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/csmoe/mono-macro"
description = """
Force monomorphizing on functions with `share-generics` to minimalize binary size.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = [ "full", "extra-traits" ] }
quote = "1.0"
proc-macro2 = { version = "1", default-features = false }

[lib]
proc-macro = true

